# shoulders

./: .gitignore  README.md  package.json  tailwind.config.js
.claude/: CLAUDE.md
.github/workflows/: build.yml
addin/: manifest.json  manifest.xml
addin/taskpane/: index.html  taskpane.css  taskpane.js
cli/: Cargo.toml
cli/src/: main.rs
docs/: _MAP.md  admin-system.md  ai-system.md  architecture.md  auth-system.md  building.md  canvas-implementation.md  comments-system.md  editor-system.md  gotchas.md  markdown-system.md  review-system.md  rmd-system.md  state-management.md  style-guide.md  superdoc-system.md  terminal-system.md  tool-server.md  ui-layout.md  usage-system.md  web-backend.md  web-peer-review.md  web-triage.md  wiki-links.md  word-bridge.md  workflow-sdk-guide.md  workflow-system.md  zotero-system.md
src/: App.vue  platform.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: typst-aarch64-unknown-linux-gnu  typst-x86_64-apple-darwin  typst-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: addin.rs  addin_certs.rs  addin_server.rs  docx_tag.rs  fs_commands.rs  lib.rs  preview_server.rs  pty.rs  quarto.rs  tool_server.rs  typst_export.rs  workflows.rs
src/components/: GitHubConflictDialog.vue  Launcher.vue  SearchResults.vue  SetupWizard.vue  VersionHistory.vue
src/css/: comments.css  components.css  editor.css  fonts.css  handsontable.css  superdoc.css  themes.css  xterm.css
src/editor/: codeChunks.js  (+6 more)
web/: .gitignore  nuxt.config.js  package.json
(+245 files in other folders)
