[package]
name = "shoulders-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for Shoulders workspace tools"

[[bin]]
name = "shoulders-cli"
path = "src/main.rs"

[dependencies]
ureq = "3"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
